--- a/themes/starterkit/css/layouts/default_inner/default_inner.layout.no-query.css
+++ b/themes/starterkit/css/layouts/default_inner/default_inner.layout.no-query.css
@@ -18,15 +18,15 @@ html {
           margin-right: 0;
           clear: none;
           width: 50%;
-          float: right;
-          margin-left: 0;
-          margin-right: 0;
-          clear: none;
-          width: 50%;
+          clear: right;
           float: left;
-          margin-right: -100%;
-          margin-left: 0%;
-          clear: none; }
+          margin-left: 0;
+          margin-right: 0%;
+          width: 50%;
+          clear: right;
+          float: left;
+          margin-left: 0;
+          margin-right: 0%; }
         html body .l-page .l-header .l-header-second {
           width: 100%;
           float: right;
@@ -34,15 +34,15 @@ html {
           margin-right: 0;
           clear: none;
           width: 50%;
+          clear: right;
           float: left;
-          margin-right: -100%;
-          margin-left: 0%;
-          clear: none;
-          width: 50%;
-          float: right;
           margin-left: 0;
-          margin-right: 0;
-          clear: none; }
+          margin-right: 0%;
+          width: 50%;
+          clear: right;
+          float: left;
+          margin-left: 0;
+          margin-right: 0%; }
         html body .l-page .l-header .l-header-third {
           width: 100%;
           float: right;
