--- a/themes/starterkit/css/starterkit.no-query.css
+++ b/themes/starterkit/css/starterkit.no-query.css
@@ -25,6 +25,9 @@ img, media {
   width: 100%;
   float: left; }
 
+.l-region {
+  position: relative; }
+
 .block {
   display: block;
   float: left;
@@ -90,6 +93,53 @@ h2 {
     padding-right: 5px; }
     .breadcrumb li a, .breadcrumb li span {
       color: #444444; }
+
+#block-user-login {
+  display: block;
+  width: auto;
+  position: absolute;
+  right: 10px; }
+  #block-user-login h2.block__title {
+    float: right;
+    cursor: pointer;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 5px; }
+    #block-user-login h2.block__title:before {
+      display: none !important; }
+  #block-user-login .block__content {
+    display: none;
+    position: absolute;
+    width: 281px;
+    background: white;
+    top: 40px;
+    right: 0;
+    border: 1px solid #444;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7); }
+    #block-user-login .block__content form.user-login-form .form-item {
+      display: block;
+      width: 100%;
+      height: 20px;
+      margin: 5px 0; }
+      #block-user-login .block__content form.user-login-form .form-item label {
+        display: block;
+        float: left;
+        font-size: 12px;
+        line-height: 20px; }
+      #block-user-login .block__content form.user-login-form .form-item input {
+        display: block;
+        float: right;
+        height: 20px; }
+    #block-user-login .block__content form.user-login-form ul {
+      display: none; }
+    #block-user-login .block__content form.user-login-form #edit-actions {
+      display: block;
+      margin: 5px auto;
+      width: 60px; }
+    #block-user-login .block__content.open {
+      display: block; }
 
 /*main menu block*/
 #block-menu-block-1 {
