--- a/themes/starterkit/sass/layouts/default_inner/default_inner.layout.scss
+++ b/themes/starterkit/sass/layouts/default_inner/default_inner.layout.scss
@@ -29,20 +29,20 @@ html{
 				.l-header-first{
 					@include grid-span(12,1);
 					@include breakpoint($tab,true){
-						@include grid-span(6,7);
+						@include float-span(6);
 					}
 					@include breakpoint($desk,true){
-						@include grid-span(6,1);
+						@include float-span(6);
 					}
 					.l-region--header-first{}
 				}
 				.l-header-second{
 					@include grid-span(12,1);
 					@include breakpoint($tab,true){
-						@include grid-span(6,1);
+						@include float-span(6);
 					}
 					@include breakpoint($desk,true){
-						@include grid-span(6,7);
+						@include float-span(6);
 					}
 					.l-region--header-second{}
 				}
