--- a/themes/starterkit/sass/starterkit.styles.scss
+++ b/themes/starterkit/sass/starterkit.styles.scss
@@ -45,6 +45,9 @@
 	width:100%;
 	float:left;
 }
+.l-region{
+	position:relative;
+}
 .block{
 	@include floatblock();
 }
@@ -106,6 +109,64 @@ h2{
 			color:$dkgray;
 		}
 		&:after{}
+	}
+}
+#block-user-login{
+	display:block;
+	width:auto;
+	position: absolute;
+	right: 10px;
+	h2.block__title{
+		float:right;
+		cursor:pointer;
+		border:1px solid black;
+		padding:5px;
+		border-radius:5px;
+		&:before{
+			display:none!important;
+		}
+	}
+	.block__content{
+		display:none;
+		position: absolute;
+		width: 281px;
+		background: white;
+		top: 40px;
+		right: 0;
+		border: 1px solid #444;
+		border-radius: 5px;
+		padding: 5px;
+		box-shadow: 0 0 10px rgba(0,0,0,0.7);
+		form.user-login-form{
+			.form-item{
+				display: block;
+				width: 100%;
+				height: 20px;
+				margin: 5px 0;
+				label{
+					display:block;
+					float:left;
+					font-size:12px;
+					line-height:20px;
+				}
+				input{
+					display:block;
+					float:right;
+					height:20px;
+				}
+			}
+			ul{
+				display:none;
+			}
+			#edit-actions{
+				display:block;
+				margin:5px auto;
+				width:60px;
+			}
+		}
+		&.open{
+			display:block;
+		}
 	}
 }
 /*main menu block*/
