--- a/themes/starterkit/sass/layouts/peeler/peeler.layout.scss
+++ b/themes/starterkit/sass/layouts/peeler/peeler.layout.scss
@@ -17,7 +17,7 @@
 // dependencies shouldn't be a problem.
 @import "../../variables/**/*";
 
-header{
+/* header{
 	display: block;
 	float: left;
 	width: 100%;
@@ -32,4 +32,4 @@ footer{
 	position: fixed;
 	bottom: 0;
 	z-index: 1;
-}
+} */
