--- a/themes/starterkit/css/layouts/longscroll/longscroll.layout.css
+++ b/themes/starterkit/css/layouts/longscroll/longscroll.layout.css
@@ -1,7 +1,8 @@
 #content > ul {
   padding: 0; }
   #content > ul > li {
-    min-height: 101vh; }
+    min-height: 101vh;
+    padding-top: 50px; }
 
 #nav {
   position: fixed;
