- adjustment to longscroll section display  - adjustment to sitemap spacing

--- a/themes/starterkit/css/layouts/longscroll/longscroll.layout.css
+++ b/themes/starterkit/css/layouts/longscroll/longscroll.layout.css
@@ -2,7 +2,10 @@
   padding: 0; }
   #content > ul > li {
     min-height: 101vh;
-    padding-top: 50px; }
+    padding-top: 50px;
+    display: block;
+    float: left;
+    width: 100%; }
 
 #nav {
   position: fixed;
