--- a/themes/starterkit/css/layouts/sitemap/sitemap.layout.css
+++ b/themes/starterkit/css/layouts/sitemap/sitemap.layout.css
@@ -1,149 +1,118 @@
-/* Options Nav Bar */
-.options {
-  display: block;
-  float: left;
-  position: fixed;
-  margin-top: 10px;
-  left: calc(50% - 112px);
-  background: #eee;
-  z-index: 1; }
-
-.options ul {
-  float: left;
-  display: table;
-  margin: 0;
-  padding: 0; }
-
-.options ul li {
-  width: 100px !important;
-  height: 30px !important;
-  display: table-cell;
-  float: none !important;
-  text-align: center !important;
-  vertical-align: middle;
-  border: 1px solid #000;
-  cursor: pointer;
-  padding: 0 !important; }
-
-.options ul li.active {
-  background: #ccc; }
-
-/* Sitemap General */
 html {
   margin-bottom: 20px; }
-
-body {
-  background: #ccc; }
-
-.sitemap {
-  padding: 30px 20px 20px 20px; }
-
-.sitemap a {
-  display: block;
-  background: #fff;
-  width: 110px;
-  min-height: 38px;
-  padding: 5px 8px;
-  font: bold 14px Arial, Helvetica, sans-serif;
-  color: #444;
-  text-align: center;
-  text-decoration: none;
-  box-sizing: border-box; }
-
-.sitemap a.home {
-  background: none;
-  float: left;
-  width: 100%;
-  margin-top: 25px;
-  font-size: 30px;
-  color: #444;
-  text-align: center;
-  border-bottom: 1px solid #000; }
-
-.sitemap ul.menu {
-  margin: 0;
-  padding: 0;
-  border-left: 1px solid #000; }
-
-.sitemap ul.menu > li:before {
-  content: "";
-  display: block;
-  width: 25px;
-  height: 30px;
-  margin-left: -25px;
-  border-bottom: 1px solid #000; }
-
-.sitemap .menu-block-wrapper > ul.menu > li:before {
-  border-left: 1px solid #000; }
-
-.sitemap ul.menu > li a {
-  margin-top: -20px; }
-
-.sitemap ul.menu li {
-  float: none;
-  width: 100%;
-  padding: 0 0 0 25px;
-  list-style: none;
-  text-align: left;
-  box-sizing: border-box; }
-
-.sitemap li a {
-  border: 4px solid #444444; }
-
-.sitemap li li a {
-  border: 4px solid #898989; }
-
-.sitemap li li li a {
-  border: 4px solid #d5d5d5; }
-
-.sitemap li li li li a {
-  border: 4px solid #e0e0e0; }
-
-.sitemap .menu-block-wrapper > ul.menu > li {
-  float: left; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-1 {
-  width: 100%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-2 {
-  width: 50%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-3 {
-  width: 33%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-4 {
-  width: 25%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-5 {
-  width: 20%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-6 {
-  width: 16%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-7 {
-  width: 14%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-8 {
-  width: 12.5%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-9 {
-  width: 11%; }
-
-.sitemap .menu-block-wrapper > ul.menu > li.width-10 {
-  width: 10%; }
-
-/* Vertical Allignment (Option 2) */
-.o2 .sitemap {
-  padding: 50px 0 0 20px; }
-
-.o2 .sitemap .menu-block-wrapper > ul.menu > li {
-  float: none;
-  width: 100%; }
-
-.o2 .sitemap .menu-block-wrapper > ul.menu > li:before {
-  border-left: none; }
-
-.o2 .sitemap .menu-block-wrapper a.home {
-  margin: 0;
-  text-align: left;
-  border-bottom: none; }
+  html body {
+    background: #ccc; }
+    html body .options {
+      display: block;
+      float: left;
+      position: fixed;
+      margin-top: 10px;
+      left: calc(50% - 112px);
+      background: #eee;
+      z-index: 1; }
+      html body .options ul {
+        float: left;
+        display: table;
+        margin: 0;
+        padding: 0; }
+        html body .options ul li {
+          width: 100px !important;
+          height: 30px !important;
+          display: table-cell;
+          float: none !important;
+          text-align: center !important;
+          vertical-align: middle;
+          border: 1px solid #000;
+          cursor: pointer;
+          padding: 0 !important; }
+        html body .options ul li.active {
+          background: #ccc; }
+    html body .sitemap {
+      padding: 30px 20px 20px 20px; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li {
+        float: left; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-1 {
+        width: 100%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-2 {
+        width: 50%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-3 {
+        width: 33%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-4 {
+        width: 25%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-5 {
+        width: 20%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-6 {
+        width: 16%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-7 {
+        width: 14%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-8 {
+        width: 12.5%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-9 {
+        width: 11%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li.width-10 {
+        width: 10%; }
+      html body .sitemap .menu-block-wrapper > ul.menu > li:before {
+        border-left: 1px solid #000; }
+      html body .sitemap ul.menu {
+        margin: 0;
+        padding: 0;
+        border-left: 1px solid #000; }
+        html body .sitemap ul.menu li {
+          float: none;
+          width: 100%;
+          padding: 0 0 0 25px;
+          list-style: none;
+          text-align: left;
+          box-sizing: border-box; }
+          html body .sitemap ul.menu li a {
+            border: 4px solid #444444; }
+          html body .sitemap ul.menu li li a {
+            border: 4px solid #898989; }
+          html body .sitemap ul.menu li li li a {
+            border: 4px solid #d5d5d5; }
+          html body .sitemap ul.menu li li li li a {
+            border: 4px solid #e0e0e0; }
+        html body .sitemap ul.menu > li:before {
+          content: "";
+          display: block;
+          width: 25px;
+          height: 30px;
+          margin-left: -25px;
+          border-bottom: 1px solid #000; }
+        html body .sitemap ul.menu > li a {
+          margin-top: -20px; }
+      html body .sitemap a {
+        display: block;
+        background: #fff;
+        width: 110px;
+        min-height: 38px;
+        padding: 5px 8px;
+        font: bold 14px Arial, Helvetica, sans-serif;
+        color: #444;
+        text-align: center;
+        text-decoration: none;
+        box-sizing: border-box; }
+      html body .sitemap a.home {
+        background: none;
+        float: left;
+        width: 100%;
+        margin-top: 25px;
+        font-size: 30px;
+        color: #444;
+        text-align: center;
+        border-bottom: 1px solid #000; }
+    html body .o2 {
+      /* Vertical Allignment (Option 2) */ }
+      html body .o2 .sitemap {
+        padding: 50px 0 0 20px; }
+        html body .o2 .sitemap .menu-block-wrapper ul.menu > li:before {
+          height: 60px; }
+        html body .o2 .sitemap .menu-block-wrapper > ul.menu > li {
+          float: none;
+          width: 100%; }
+        html body .o2 .sitemap .menu-block-wrapper > ul.menu > li:before {
+          border-left: none; }
+        html body .o2 .sitemap .menu-block-wrapper a.home {
+          margin: 0;
+          text-align: left;
+          border-bottom: none; }
