--- a/themes/starterkit/sass/layouts/sitemap/sitemap.layout.scss
+++ b/themes/starterkit/sass/layouts/sitemap/sitemap.layout.scss
@@ -17,135 +17,131 @@
 // dependencies shouldn't be a problem.
 @import "../../variables/**/*";
 
-/* Options Nav Bar */
-.options {
-  display: block;
-  float: left;
-  position: fixed;
-  margin-top: 10px;
-  left: calc(50% - 112px);
-  background: #eee;
-  z-index: 1; 
-}
-.options ul {
-  float: left;
-  display: table;
-  margin: 0;
-  padding: 0; 
-}
-.options ul li {
-  width: 100px !important;
-  height: 30px !important;
-  display: table-cell;
-  float: none !important;
-  text-align: center !important;
-  vertical-align: middle;
-  border: 1px solid #000;
-  cursor: pointer;
-  padding: 0 !important; 
-}
-.options ul li.active {
-  background: #ccc; 
-}
-
-/* Sitemap General */
-html {
-  margin-bottom: 20px; 
-}
-body {
-  background: #ccc; 
-}
-.sitemap {
-  padding: 30px 20px 20px 20px; 
-}
-.sitemap a {
-  display: block;
-  background: #fff;
-  width: 110px;
-  min-height: 38px;
-  padding: 5px 8px;
-  font: bold 14px Arial, Helvetica, sans-serif;
-  color: #444;
-  text-align: center;
-  text-decoration: none;
-  box-sizing: border-box; 
-}
-.sitemap a.home {
-  background: none;
-  float: left;
-  width: 100%;
-  margin-top: 25px;
-  font-size: 30px;
-  color: #444;
-  text-align: center;
-  border-bottom: 1px solid #000; 
-}
-.sitemap ul.menu {
-  margin: 0;
-  padding: 0;
-  border-left: 1px solid #000; 
-}
-.sitemap ul.menu > li:before {
-  content: "";
-  display: block;
-  width: 25px;
-  height: 30px;
-  margin-left: -25px;
-  border-bottom: 1px solid #000; 
-}
-.sitemap .menu-block-wrapper > ul.menu > li:before {
-  border-left: 1px solid #000; 
-}
-.sitemap ul.menu > li a {
-  margin-top: -20px; 
-}
-.sitemap ul.menu li {
-  float: none;
-  width: 100%;
-  padding: 0 0 0 25px;
-  list-style: none;
-  text-align: left;
-  box-sizing: border-box; 
-}
-.sitemap li a {
-  border: 4px solid $dkgray;
-}
-.sitemap li li a {
-  border: 4px solid $gray;
-}
-.sitemap li li li a {
-  border: 4px solid $ltgray;
-}
-.sitemap li li li li a {
-  border: 4px solid $whitegray;
-}
-.sitemap .menu-block-wrapper > ul.menu > li {
-  float: left; 
-}
-.sitemap .menu-block-wrapper > ul.menu > li.width-1 { width: 100%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-2 { width: 50%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-3 { width: 33%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-4 { width: 25%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-5 { width: 20%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-6 { width: 16%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-7 { width: 14%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-8 { width: 12.5%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-9 { width: 11%; }
-.sitemap .menu-block-wrapper > ul.menu > li.width-10 { width: 10%; }
-
-/* Vertical Allignment (Option 2) */
-.o2 .sitemap {
-  padding: 50px 0 0 20px; 
-}
-.o2 .sitemap .menu-block-wrapper > ul.menu > li {
-  float: none;
-  width: 100%; 
-}
-.o2 .sitemap .menu-block-wrapper > ul.menu > li:before {
-  border-left: none; 
-}
-.o2 .sitemap .menu-block-wrapper a.home {
-  margin: 0;
-  text-align: left;
-  border-bottom: none; 
+html{
+	margin-bottom: 20px;
+    body{
+    	background: #ccc;
+        .options{
+        	display: block;
+			float: left;
+			position: fixed;
+			margin-top: 10px;
+			left: calc(50% - 112px);
+			background: #eee;
+			z-index: 1;
+			ul{
+				float: left;
+				display: table;
+				margin: 0;
+				padding: 0;
+				li{
+					width: 100px !important;
+					height: 30px !important;
+					display: table-cell;
+					float: none !important;
+					text-align: center !important;
+					vertical-align: middle;
+					border: 1px solid #000;
+					cursor: pointer;
+					padding: 0 !important; 
+				}
+				li.active{
+					background: #ccc;
+				}
+			}
+		}
+		.sitemap{
+			padding: 30px 20px 20px 20px;
+			.menu-block-wrapper{
+				> ul.menu{
+					> li{ float: left; }
+					> li.width-1{ width: 100%; }
+					> li.width-2{ width: 50%; }
+					> li.width-3{ width: 33%; }
+					> li.width-4{ width: 25%; }
+					> li.width-5{ width: 20%; }
+					> li.width-6{ width: 16%; }
+					> li.width-7{ width: 14%; }
+					> li.width-8{ width: 12.5%; }
+					> li.width-9{ width: 11%; }
+					> li.width-10{ width: 10%; }
+					> li:before{ border-left: 1px solid #000; }
+				}
+			}
+			ul.menu{
+				margin: 0;
+				padding: 0;
+				border-left: 1px solid #000;
+				li{
+					float: none;
+					width: 100%;
+					padding: 0 0 0 25px;
+					list-style: none;
+					text-align: left;
+					box-sizing: border-box;
+					a{ border: 4px solid $dkgray; }
+					li a{ border: 4px solid $gray; }
+					li li a{ border: 4px solid $ltgray; }
+					li li li a{ border: 4px solid $whitegray; }
+				}
+				> li:before{
+					content: "";
+					display: block;
+					width: 25px;
+					height: 30px;
+					margin-left: -25px;
+					border-bottom: 1px solid #000;
+				}
+				> li a{
+					margin-top: -20px;
+				}
+			}
+			a{
+				display: block;
+				background: #fff;
+				width: 110px;
+				min-height: 38px;
+				padding: 5px 8px;
+				font: bold 14px Arial, Helvetica, sans-serif;
+				color: #444;
+				text-align: center;
+				text-decoration: none;
+				box-sizing: border-box;
+			}
+			a.home{
+				background: none;
+				float: left;
+				width: 100%;
+				margin-top: 25px;
+				font-size: 30px;
+				color: #444;
+				text-align: center;
+				border-bottom: 1px solid #000;
+			}
+		}
+		.o2{	/* Vertical Allignment (Option 2) */
+			.sitemap{
+				padding: 50px 0 0 20px;
+				.menu-block-wrapper{
+					ul.menu > li:before{
+						height: 60px;
+					}
+					> ul.menu{
+						> li{
+							float: none;
+							width: 100%;
+						}
+						> li:before{
+							border-left: none;
+						}
+					}
+					a.home{
+						margin: 0;
+						text-align: left;
+						border-bottom: none;
+					}
+				}
+			}
+    	}
+    }
 }
