--- a/themes/starterkit/css/layouts/peeler/peeler.layout.no-query.css
+++ b/themes/starterkit/css/layouts/peeler/peeler.layout.no-query.css
@@ -1,16 +1,50 @@
-/* header{
-	display: block;
-	float: left;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	z-index: 1;
-}
-footer{
-	display: block;
-	float: left;
-	width: 100%;
-	position: fixed;
-	bottom: 0;
-	z-index: 1;
-} */
+header {
+  display: block;
+  float: left;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1; }
+
+footer {
+  display: block;
+  float: left;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  z-index: 1; }
+
+.l-region {
+  position: relative;
+  top: -85px; }
+
+div#content-region1 {
+  background-color: #444444; }
+
+div#content-region2 {
+  background-color: #898989; }
+
+div#content-region3 {
+  background-color: #d5d5d5; }
+
+div#content-region4 {
+  background-color: #e0e0e0; }
+
+div.content-region {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+  display: block;
+  -moz-box-shadow: 0 0 12px #666;
+  -webkit-box-shadow: 0 0 12px #666;
+  box-shadow: 0 0 12px #666;
+  background: #f2f2f2;
+  overflow: hidden;
+  border: 5px solid #000; }
+
+div.content-region .background {
+  height: 100%;
+  width: 100%;
+  display: block; }
