--- a/themes/starterkit/css/layouts/peeler/peeler.layout.css
+++ b/themes/starterkit/css/layouts/peeler/peeler.layout.css
@@ -1,10 +1,13 @@
+#admin-menu {
+  z-index: 1002; }
+
 header {
   display: block;
   float: left;
   width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: 1; }
+  position: relative;
+  top: 90px;
+  z-index: 1001; }
 
 footer {
   display: block;
