- added in fixed footer to peeler and gave it specific styling.  - need to determine how we want footer to behave here for future dev

--- a/themes/starterkit/css/layouts/peeler/peeler.layout.css
+++ b/themes/starterkit/css/layouts/peeler/peeler.layout.css
@@ -15,7 +15,8 @@ footer {
   width: 100%;
   position: fixed;
   bottom: 0;
-  z-index: 1; }
+  z-index: 1000;
+  height: 0; }
 
 .l-region {
   position: relative;
@@ -51,3 +52,12 @@ div.content-region .background {
   height: 100%;
   width: 100%;
   display: block; }
+
+.l-footer .l-region--footer-first,
+.l-footer .l-region--footer-second {
+  width: 50%;
+  clear: right;
+  float: left;
+  margin-left: 0;
+  margin-right: 0%;
+  margin-top: 12px; }
