--- a/themes/starterkit/css/layouts/twocolumn/twocolumn.layout.no-query.css
+++ b/themes/starterkit/css/layouts/twocolumn/twocolumn.layout.no-query.css
@@ -12,6 +12,7 @@ html body .l-page {
       margin-left: 0;
       margin-right: 0;
       clear: none;
+      margin: 0;
       width: 50%;
       float: left;
       margin-right: -100%;
@@ -28,6 +29,7 @@ html body .l-page {
       margin-left: 0;
       margin-right: 0;
       clear: none;
+      margin: 0;
       width: 50%;
       float: right;
       margin-left: 0;
@@ -44,6 +46,7 @@ html body .l-page {
       margin-left: 0;
       margin-right: 0;
       clear: none;
+      margin: 0;
       width: 100%;
       float: right;
       margin-left: 0;
@@ -114,3 +117,82 @@ html body .l-page {
       display: block;
       float: left;
       width: 100%; }
+
+@media print {
+  body.print-tablet {
+    width: 45em !important; }
+    body.print-tablet .l-page .l-header .l-header-first {
+      width: 50%;
+      float: left;
+      margin-right: -100%;
+      margin-left: 0%;
+      clear: none; }
+    body.print-tablet .l-page .l-header .l-header-second {
+      width: 50%;
+      float: right;
+      margin-left: 0;
+      margin-right: 0;
+      clear: none; }
+    body.print-tablet .l-page .l-header .l-header-third {
+      width: 100%;
+      float: right;
+      margin-left: 0;
+      margin-right: 0;
+      clear: none; }
+    body.print-tablet .l-page .l-main .l-content-center {
+      overflow: hidden; }
+      body.print-tablet .l-page .l-main .l-content-center .l-region--content-left {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        width: 50%;
+        clear: right;
+        float: left;
+        margin-left: 0;
+        margin-right: 0%; }
+      body.print-tablet .l-page .l-main .l-content-center .l-region--content-right {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        width: 50%;
+        clear: right;
+        float: left;
+        margin-left: 0;
+        margin-right: 0%; }
+
+  body.print-desktop {
+    width: 70em !important; }
+    body.print-desktop .l-page .l-header .l-header-first {
+      width: 50%;
+      float: left;
+      margin-right: -100%;
+      margin-left: 0%;
+      clear: none; }
+    body.print-desktop .l-page .l-header .l-header-second {
+      width: 50%;
+      float: right;
+      margin-left: 0;
+      margin-right: 0;
+      clear: none; }
+    body.print-desktop .l-page .l-header .l-header-third {
+      width: 100%;
+      float: right;
+      margin-left: 0;
+      margin-right: 0;
+      clear: none; }
+    body.print-desktop .l-page .l-main .l-content-center {
+      overflow: hidden; }
+      body.print-desktop .l-page .l-main .l-content-center .l-region--content-left {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        width: 50%;
+        clear: right;
+        float: left;
+        margin-left: 0;
+        margin-right: 0%; }
+      body.print-desktop .l-page .l-main .l-content-center .l-region--content-right {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        width: 50%;
+        clear: right;
+        float: left;
+        margin-left: 0;
+        margin-right: 0%; } }
