--- a/themes/starterkit/css/layouts/default_inner/default_inner.layout.no-query.css
+++ b/themes/starterkit/css/layouts/default_inner/default_inner.layout.no-query.css
@@ -158,3 +158,116 @@ html body .l-page {
       display: block;
       float: left;
       width: 100%; }
+
+@media print {
+  body.print-tablet {
+    width: 45em !important; }
+    body.print-tablet .l-page .l-header .l-header-first {
+      width: 50%;
+      clear: right;
+      float: left;
+      margin-left: 0;
+      margin-right: 0%; }
+    body.print-tablet .l-page .l-header .l-header-second {
+      width: 50%;
+      clear: right;
+      float: left;
+      margin-left: 0;
+      margin-right: 0%; }
+    body.print-tablet .l-page .l-header .l-header-third {
+      width: 100%;
+      float: right;
+      margin-left: 0;
+      margin-right: 0;
+      clear: none; }
+    body.print-tablet .l-page .l-main .l-content-center {
+      overflow: hidden; }
+      body.print-tablet .l-page .l-main .l-content-center .l-nav-sidebar {
+        width: 25%;
+        float: right;
+        margin-left: 0;
+        margin-right: 0;
+        clear: none;
+        padding-bottom: 2000px;
+        margin-bottom: -2000px; }
+      body.print-tablet .l-page .l-main .l-content-center .l-content-wrapper {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        overflow: hidden;
+        width: 75%;
+        float: left;
+        margin-right: -100%;
+        margin-left: 0%;
+        clear: none; }
+        body.print-tablet .l-page .l-main .l-content-center .l-content-wrapper .l-content {
+          padding-bottom: 2000px;
+          margin-bottom: -2000px;
+          width: 75%;
+          clear: right;
+          float: left;
+          margin-left: 0;
+          margin-right: 0%; }
+        body.print-tablet .l-page .l-main .l-content-center .l-content-wrapper .l-promo-sidebar {
+          padding-bottom: 2000px;
+          margin-bottom: -2000px;
+          width: 25%;
+          clear: right;
+          float: left;
+          margin-left: 0;
+          margin-right: 0%; }
+
+  body.print-desktop {
+    width: 70em !important; }
+    body.print-desktop .l-page .l-header .l-header-first {
+      width: 50%;
+      clear: right;
+      float: left;
+      margin-left: 0;
+      margin-right: 0%; }
+    body.print-desktop .l-page .l-header .l-header-second {
+      width: 50%;
+      clear: right;
+      float: left;
+      margin-left: 0;
+      margin-right: 0%; }
+    body.print-desktop .l-page .l-header .l-header-third {
+      width: 100%;
+      float: right;
+      margin-left: 0;
+      margin-right: 0;
+      clear: none; }
+    body.print-desktop .l-page .l-main .l-content-center {
+      overflow: hidden; }
+      body.print-desktop .l-page .l-main .l-content-center .l-nav-sidebar {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        width: 25%;
+        float: left;
+        margin-right: -100%;
+        margin-left: 0%;
+        clear: none; }
+      body.print-desktop .l-page .l-main .l-content-center .l-content-wrapper {
+        padding-bottom: 2000px;
+        margin-bottom: -2000px;
+        overflow: hidden;
+        width: 75%;
+        float: right;
+        margin-left: 0;
+        margin-right: 0;
+        clear: none; }
+        body.print-desktop .l-page .l-main .l-content-center .l-content-wrapper .l-content {
+          padding-bottom: 2000px;
+          margin-bottom: -2000px;
+          width: 75%;
+          clear: right;
+          float: left;
+          margin-left: 0;
+          margin-right: 0%; }
+        body.print-desktop .l-page .l-main .l-content-center .l-content-wrapper .l-promo-sidebar {
+          padding-bottom: 2000px;
+          margin-bottom: -2000px;
+          width: 25%;
+          clear: right;
+          float: left;
+          margin-left: 0;
+          margin-right: 0%; } }
