--- a/themes/starterkit/css/starterkit.no-query.css
+++ b/themes/starterkit/css/starterkit.no-query.css
@@ -263,3 +263,80 @@ html {
   html body {
     max-width: 1600px;
     margin: 0 auto; }
+
+.print-buttons {
+  position: fixed;
+  left: -60px;
+  z-index: 9999;
+  background: #ff7e00;
+  border: 2px solid #334477;
+  padding-right: 16px;
+  border-radius: 0 5px 5px 0;
+  transition: all 1s;
+  -webkit-transition: all 1s; }
+  .print-buttons:after {
+    content: '\f02f';
+    font-family: FontAwesome;
+    position: absolute;
+    right: 2px;
+    top: calc(50% - 8px);
+    font-size: 16px;
+    color: #f2f2f2;
+    text-shadow: 0 0 10px #111; }
+  .print-buttons.open {
+    left: -2px;
+    transition: all 1s;
+    -webkit-transition: all 1s; }
+  .print-buttons ul {
+    margin: 0;
+    list-style-type: none;
+    width: 60px;
+    padding: 0;
+    display: block;
+    float: left;
+    padding: 5px 0; }
+    .print-buttons ul li {
+      padding: 5px;
+      display: block;
+      float: left;
+      width: 100%; }
+      .print-buttons ul li button {
+        width: 40px;
+        height: 40px;
+        display: block;
+        float: right;
+        background: none;
+        border: 2px solid #444;
+        border-radius: 5px;
+        outline: 0;
+        padding: 0; }
+        .print-buttons ul li button:before {
+          font-size: 25px;
+          line-height: 35px;
+          font-family: FontAwesome; }
+        .print-buttons ul li button.mobile:before {
+          content: "\f10b"; }
+        .print-buttons ul li button.tablet:before {
+          content: "\f10a"; }
+        .print-buttons ul li button.desktop:before {
+          content: "\f108"; }
+        .print-buttons ul li button:hover {
+          background: rgba(255, 218, 187, 0.43); }
+
+@page {
+  margin: 0.2in; }
+
+@media print {
+  body .printheader img {
+    width: 30%;
+    display: block;
+    float: left; }
+  body .printheader .date {
+    width: 30%;
+    display: block;
+    float: right;
+    text-align: right; }
+
+  .print-buttons,
+  .tabs--primary {
+    display: none !important; } }
