--- a/themes/starterkit/css/layouts/sitemap/sitemap.layout.css
+++ b/themes/starterkit/css/layouts/sitemap/sitemap.layout.css
@@ -72,6 +72,21 @@ html {
             border: 4px solid #d5d5d5; }
           html body .sitemap ul.menu li li li li a {
             border: 4px solid #e0e0e0; }
+          html body .sitemap ul.menu li a.hide {
+            display: none; }
+        html body .sitemap ul.menu li.hide {
+          display: none; }
+        html body .sitemap ul.menu i.toggle-icon {
+          position: absolute;
+          margin: -10px 0 0 -34px;
+          background: #fff;
+          color: #000;
+          border-radius: 50%;
+          font-size: 16px; }
+        html body .sitemap ul.menu i.fa-times {
+          padding: 1px 3px; }
+        html body .sitemap ul.menu i.fa-plus {
+          padding: 3px 3px 0px 3px; }
         html body .sitemap ul.menu > li:before {
           content: "";
           display: block;
