--- a/themes/starterkit/css/layouts/sitemap/sitemap.layout.no-query.css
+++ b/themes/starterkit/css/layouts/sitemap/sitemap.layout.no-query.css
@@ -1,7 +1,9 @@
 html {
+  background: #d5d5d5;
   margin-bottom: 20px; }
   html body {
-    background: #ccc; }
+    /* Color Change On Hover */
+    /* Vertical Allignment (Option 2) */ }
     html body .options {
       display: block;
       float: left;
@@ -29,6 +31,49 @@ html {
           background: #ccc; }
     html body .sitemap {
       padding: 30px 20px 20px 20px; }
+      html body .sitemap .menu-block-wrapper ul.menu {
+        margin: 0;
+        padding: 0;
+        border-left: 1px solid #000; }
+        html body .sitemap .menu-block-wrapper ul.menu li {
+          float: none;
+          width: 100%;
+          padding: 0 0 0 25px;
+          list-style: none;
+          text-align: left;
+          box-sizing: border-box; }
+          html body .sitemap .menu-block-wrapper ul.menu li a {
+            border: 4px solid #444444; }
+          html body .sitemap .menu-block-wrapper ul.menu li li a {
+            border: 4px solid #898989; }
+          html body .sitemap .menu-block-wrapper ul.menu li li li a {
+            border: 4px solid #d5d5d5; }
+          html body .sitemap .menu-block-wrapper ul.menu li li li li a {
+            border: 4px solid #e0e0e0; }
+          html body .sitemap .menu-block-wrapper ul.menu li a.hide {
+            display: none; }
+        html body .sitemap .menu-block-wrapper ul.menu li.hide {
+          display: none; }
+        html body .sitemap .menu-block-wrapper ul.menu i.toggle-icon {
+          position: absolute;
+          margin: -10px 0 0 -34px;
+          background: #fff;
+          color: #000;
+          border-radius: 50%;
+          font-size: 16px; }
+        html body .sitemap .menu-block-wrapper ul.menu i.fa-times {
+          padding: 1px 3px; }
+        html body .sitemap .menu-block-wrapper ul.menu i.fa-plus {
+          padding: 3px 3px 0px 3px; }
+        html body .sitemap .menu-block-wrapper ul.menu > li:before {
+          content: "";
+          display: block;
+          width: 25px;
+          height: 30px;
+          margin-left: -25px;
+          border-bottom: 1px solid #000; }
+        html body .sitemap .menu-block-wrapper ul.menu > li a {
+          margin-top: -20px; }
       html body .sitemap .menu-block-wrapper > ul.menu > li {
         float: left; }
       html body .sitemap .menu-block-wrapper > ul.menu > li.width-1 {
@@ -53,50 +98,7 @@ html {
         width: 10%; }
       html body .sitemap .menu-block-wrapper > ul.menu > li:before {
         border-left: 1px solid #000; }
-      html body .sitemap ul.menu {
-        margin: 0;
-        padding: 0;
-        border-left: 1px solid #000; }
-        html body .sitemap ul.menu li {
-          float: none;
-          width: 100%;
-          padding: 0 0 0 25px;
-          list-style: none;
-          text-align: left;
-          box-sizing: border-box; }
-          html body .sitemap ul.menu li a {
-            border: 4px solid #444444; }
-          html body .sitemap ul.menu li li a {
-            border: 4px solid #898989; }
-          html body .sitemap ul.menu li li li a {
-            border: 4px solid #d5d5d5; }
-          html body .sitemap ul.menu li li li li a {
-            border: 4px solid #e0e0e0; }
-          html body .sitemap ul.menu li a.hide {
-            display: none; }
-        html body .sitemap ul.menu li.hide {
-          display: none; }
-        html body .sitemap ul.menu i.toggle-icon {
-          position: absolute;
-          margin: -10px 0 0 -34px;
-          background: #fff;
-          color: #000;
-          border-radius: 50%;
-          font-size: 16px; }
-        html body .sitemap ul.menu i.fa-times {
-          padding: 1px 3px; }
-        html body .sitemap ul.menu i.fa-plus {
-          padding: 3px 3px 0px 3px; }
-        html body .sitemap ul.menu > li:before {
-          content: "";
-          display: block;
-          width: 25px;
-          height: 30px;
-          margin-left: -25px;
-          border-bottom: 1px solid #000; }
-        html body .sitemap ul.menu > li a {
-          margin-top: -20px; }
-      html body .sitemap a {
+      html body .sitemap .menu-block-wrapper a {
         display: block;
         background: #fff;
         width: 110px;
@@ -107,7 +109,7 @@ html {
         text-align: center;
         text-decoration: none;
         box-sizing: border-box; }
-      html body .sitemap a.home {
+      html body .sitemap .menu-block-wrapper a.home {
         background: none;
         float: left;
         width: 100%;
@@ -116,18 +118,30 @@ html {
         color: #444;
         text-align: center;
         border-bottom: 1px solid #000; }
-    html body .o2 {
-      /* Vertical Allignment (Option 2) */ }
-      html body .o2 .sitemap {
-        padding: 50px 0 0 20px; }
-        html body .o2 .sitemap .menu-block-wrapper ul.menu > li:before {
-          height: 60px; }
-        html body .o2 .sitemap .menu-block-wrapper > ul.menu > li {
-          float: none;
-          width: 100%; }
-        html body .o2 .sitemap .menu-block-wrapper > ul.menu > li:before {
-          border-left: none; }
-        html body .o2 .sitemap .menu-block-wrapper a.home {
-          margin: 0;
-          text-align: left;
-          border-bottom: none; }
+    html body .sitemap .menu-block-wrapper ul.menu {
+      padding: 0px 25px 20px 0px;
+      -webkit-box-shadow: 2px 2px 5px black;
+      background: #282828; }
+      html body .sitemap .menu-block-wrapper ul.menu ul.menu {
+        background: #393939; }
+        html body .sitemap .menu-block-wrapper ul.menu ul.menu ul.menu {
+          background: #4b4b4b; }
+          html body .sitemap .menu-block-wrapper ul.menu ul.menu ul.menu ul.menu {
+            background: #5a5a5a; }
+    html body .sitemap .menu-block-wrapper > ul.menu {
+      padding: 0; }
+    html body .o2 .sitemap {
+      padding: 50px 0 0 20px; }
+      html body .o2 .sitemap .menu-block-wrapper > ul.menu {
+        padding: 0px 25px 20px 0px; }
+      html body .o2 .sitemap .menu-block-wrapper ul.menu > li:before {
+        height: 60px; }
+      html body .o2 .sitemap .menu-block-wrapper > ul.menu > li {
+        float: none;
+        width: 100%; }
+      html body .o2 .sitemap .menu-block-wrapper > ul.menu > li:before {
+        border-left: none; }
+      html body .o2 .sitemap .menu-block-wrapper a.home {
+        margin: 0;
+        text-align: left;
+        border-bottom: none; }
