--- a/themes/starterkit/css/layouts/twocolumn/twocolumn.layout.css
+++ b/themes/starterkit/css/layouts/twocolumn/twocolumn.layout.css
@@ -54,21 +54,24 @@ html body .l-page {
       margin-left: 0;
       margin-right: 0;
       clear: none;
-      margin: 0; }
+      margin: 0;
+      clear: both; }
       @media (min-width: 45em) {
         html body .l-page .l-header .l-header-third {
           width: 100%;
           float: right;
           margin-left: 0;
           margin-right: 0;
-          clear: none; } }
+          clear: none;
+          clear: both; } }
       @media (min-width: 70em) {
         html body .l-page .l-header .l-header-third {
           width: 100%;
           float: right;
           margin-left: 0;
           margin-right: 0;
-          clear: none; } }
+          clear: none;
+          clear: both; } }
   html body .l-page .l-main {
     display: block;
     width: 100%;
@@ -76,8 +79,7 @@ html body .l-page {
     clear: both;
     max-width: 1020px; }
     html body .l-page .l-main p {
-      font: 300 16px/16px Arial;
-      color: #d5d5d5; }
+      font: 300 16px/16px Arial; }
     html body .l-page .l-main .l-content-header {
       display: block;
       float: left;
