--- a/themes/starterkit/css/starterkit.no-query.css
+++ b/themes/starterkit/css/starterkit.no-query.css
@@ -33,13 +33,66 @@ img, media {
   float: left;
   width: 100%; }
 
-/*don't need to see these for display purposes*/
+/*site logo block*/
+#block-block-16 {
+  width: 200px; }
+  #block-block-16 p {
+    margin: 0; }
+
+#block-block-16
 .messages {
   display: none; }
 
 /*it's somehow getting a width...*/
 .element-invisible {
   max-width: 1px; }
+
+/*all beans, need to figure out the best way to add a type class to the bean wrapper*/
+.block.block--bean {
+  display: block;
+  float: left;
+  width: auto;
+  /*beans for the IA theme info*/ }
+  .block.block--bean .block__title {
+    display: block;
+    float: left;
+    width: auto; }
+  .block.block--bean .bean-ia-theme-information {
+    position: relative; }
+    .block.block--bean .bean-ia-theme-information .regiontoggle {
+      width: 100%;
+      border: 1px solid #ccc;
+      border-bottom: 1px solid #fff;
+      border-radius: 5px 5px 0 0;
+      background: none;
+      outline: 0;
+      width: 100px;
+      float: right;
+      top: 1px;
+      left: -30px;
+      position: relative;
+      line-height: 20px; }
+    .block.block--bean .bean-ia-theme-information .seemore {
+      display: none;
+      float: right;
+      width: 400px;
+      position: absolute; }
+      .block.block--bean .bean-ia-theme-information .seemore.open {
+        display: block;
+        background: white;
+        z-index: 3;
+        top: 30px;
+        left: 0;
+        border: 1px solid #444;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); }
+    .block.block--bean .bean-ia-theme-information .field {
+      display: block;
+      float: left;
+      width: 100%;
+      padding: 10px 0;
+      border-top: 1px solid #ccc; }
 
 h1 {
   color: #444444;
@@ -327,16 +380,27 @@ html {
   margin: 0.2in; }
 
 @media print {
-  body .printheader img {
+  html body .printheader img {
     width: 30%;
     display: block;
     float: left; }
-  body .printheader .date {
+  html body .printheader .date {
     width: 30%;
     display: block;
     float: right;
     text-align: right; }
+  html body .l-page .l-header .l-header-third {
+    clear: both !important; }
 
   .print-buttons,
   .tabs--primary {
-    display: none !important; } }
+    display: none !important; }
+
+  .block.block--bean {
+    /*beans for the IA theme info*/ }
+    .block.block--bean .block__title {
+      display: block;
+      float: left;
+      width: auto; }
+    .block.block--bean .bean-ia-theme-information {
+      display: none; } }
